	* uTP performance, fix packet loss when sending is stalled
	* fix trackers being stuck after session pause/resume
	* fix bug in hash_picker with empty files
	* uTP performance, prevent premature timeouts/resends
	* add option to not memory map files below a certain size
	* settings_pack now returns default values when queried for missing settings
	* fix copy_file fall-back when SEEK_HOL/SEEK_DATA is not supported
	* improve error reporting from file copy and move
	* tweak pad file placement to match reference implementation (tail-padding)
	* uTP performance, more lenient nagle's algorithm to always allow one outstanding undersized packet
	* uTP performance, piggy-back held back undersized packet with ACKs
	* uTP performance, don't send redundant deferred ACKs
	* support incoming SOCKS5 packets with hostnames as source address, for UDP trackers
	* ignore duplicate network interface change notifications on linux
	* fix total_want/want accounting when forcing a recheck
	* fix merging metadata with magnet links added on top of existing torrents
	* add torrent_flag to default all file priorities to dont_download
	* fix &so= feature in magnet links
	* improve compatibility of SOCKS5 UDP ASSOCIATE
	* fix madvise range for flushing cache in mmap_storage
	* open files with no_cache set in O_SYNC mode

* 2.0.7 released

	* fix issue in use of copy_file_range() on linux
	* avoid open-file race in the file_view_pool
	* fix issue where stop-when-ready would not close files
	* fix issue with duplicate hybrid torrent via separate v1 and v2 magnet links
	* added new function to load torrent files, load_torrent_*()
	* support sync_file_range() on linux
	* fix issue in write_torrent_file() when file size is exactly piece size
	* fix file_num_blocks() and file_num_pieces() for empty files
	* add new overload to make_magnet_uri()
	* add missing protocol version to tracker_reply_alert and tracker_error_alert
	* fix privilege issue with SetFileValidData()